Fix avatar&blog alignment in Team section

--- a/content/stylesheets/components/_avatar.scss
+++ b/content/stylesheets/components/_avatar.scss
@@ -41,6 +41,7 @@
     &::before {
       opacity: 0.1;
       border-radius: 100%;
+      vertical-align: middle;
       -webkit-mask-image: none;
       mask-image: none;
     }
