--- a/content/stylesheets/pages/_blog.scss
+++ b/content/stylesheets/pages/_blog.scss
@@ -85,6 +85,7 @@
         &:active {
           .app-avatar__image {
             filter: brightness(0.8);
+            vertical-align: middle;
           }
         }
 
